style: add CSS variables to global stylesheet and Tailwind config updates

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,28 +5,78 @@
 @layer base {
   :root {
     --radius: 0.5rem;
+
+    /* Background Colors */
+    --color-bg1: 250, 245, 237;
+    --color-bg2: 226, 218, 203;
+    --color-bg3: 238, 211, 174;
+    --color-bg4: 248, 248, 243;
+    --color-bg5: 255, 189, 89;
+    --color-bg6: 255, 255, 255;
+
+    /* Foreground Colors */
+    --color-fg1: 59, 47, 47;
+    --color-fg2: 94, 74, 74;
+    --color-fg3: 123, 94, 87;
+    --color-fg4: 155, 121, 109;
+    --color-fg5: 240, 100, 45;
+    --color-fg6: 59, 47, 47;
+
+    /* Modifier Colors */
+    --color-mg1: 49, 168, 49;
+    --color-mg2: 240, 45, 52;
+    --color-mg3: 209, 196, 177;
   }
+
+  /* Dark Mode Variables */
+  .dark {
+    /* Background Colors */
+    --color-bg1: 10, 8, 7;
+    --color-bg2: 62, 46, 35;
+    --color-bg3: 34, 22, 20;
+    --color-bg4: 25, 24, 24;
+    --color-bg5: 95, 48, 13;
+    --color-bg6: 0, 0, 0;
+
+    /* Foreground Colors */
+    --color-fg1: 221, 159, 104;
+    --color-fg2: 189, 135, 87;
+    --color-fg3: 150, 120, 105;
+    --color-fg4: 130, 100, 80;
+    --color-fg5: 255, 80, 80;
+    --color-fg6: 150, 120, 105;
+
+    /* Modifier Colors */
+    --color-mg1: 52, 177, 46;
+    --color-mg2: 230, 60, 70;
+    --color-mg3: 59, 57, 57;
+  }
+
+  /* Global Styles */
   html,
   body,
   * {
     @apply p-0 m-0 box-border;
-    font-family:
-      -apple-system,
-      BlinkMacSystemFont,
-      Segoe UI,
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      Fira Sans,
-      Droid Sans,
-      Helvetica Neue,
-      sans-serif;
+    font-family: inherit;
   }
-  ::-webkit-scrollbar {
-    width: 0px;
+
+  /* Default Font Application */
+  * {
+    @apply font-body;
   }
+
+  /* Links */
   a {
     @apply text-inherit no-underline;
+  }
+
+  /* Buttons */
+  button {
+    @apply font-semibold;
+  }
+
+  /* Scrollbar */
+  ::-webkit-scrollbar {
+    width: 0;
   }
 }
